tests/invalid/NegationType_Invalid_3.whiley
type LinkedList is null | {LinkedList next, int data}

function f(LinkedList x) -> {LinkedList next, int data}:
    return x
